# CMPLX-PartsFactory

./: .dockerignore  .env.template  .gitignore  .gitmodules  .gitnexusignore  AGENTS.md  CMPLX-PartsFactory.code-workspace  CMPLX-StackOps.ps1  Dockerfile.opencode  Makefile  README.md  SECRETS_ROTATION_REQUIRED.md  Setup-Auth.ps1  Start-BackwalkFull24.ps1  Start-BackwalkLatticeSpace.ps1  Start-BackwalkWeylBondQuadrant.ps1  Start-BackwalkWeylBondWaves.ps1  Start-CMPLX.bat  Start-CMPLXStack.ps1  Start-Simple.ps1  docker-compose.backwalk-builder.full24.yml  docker-compose.backwalk-builder.yml  docker-compose.backwalk-lattice-space.yml  docker-compose.backwalk-weyl-bond.yml  docker-compose.cmplx-discord.yml  docker-compose.cmplxmcp-runtime.yml  docker-compose.dind.yml  docker-compose.gitnexus-three-space.yml  docker-compose.lattice-forge.yml  docker-compose.proof-lab.yml  docker-compose.receipt.yml  docker-compose.repo-kernel.yml  docker-compose.server.yml  docker-compose.snap.yml  docker-compose.speedlight.yml  docker-compose.tarpit.yml  docker-compose.web.yml  docker-compose.yml  live_pipeline_test.py  opencode.json  (+2 more)
.agents/: repo-kernel-control.md
.opencode/: oh-my-opencode.jsonc
data/: HARDENED_INDEX.md  KIMI_KNOWLEDGE_SURVEY.md  MASTER_BUILD_TEMPLATE.md  ORPHAN_PROMOTIONS.md  ORPHAN_ROUTING.md  PENDING_REVIEW_INDEX.md  REPO_LAYOUT_SURVEY.md  SECOND_PASS_REVIEW.md  VALIDATION_REPORT.md
deploy/: Dockerfile.morphon  docker-compose.morphon-graph.yml
docs/: ALETHEIA2_INTEGRATION_REPORT.md  ARCHIVE_TRIAGE_REPORT_2026-05-13.md  ATTRACTOR_FRAME.md  DAG.md  (+69 more)
(+913 files in other folders)
