[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cmplx-partsfactory"
version = "0.1.0"
description = "CMPLX-PartsFactory — Unified agent ecosystem and service framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CMPLX Agent Ecosystem"},
]

dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "discord.py>=2.3.0",
    "aiohttp>=3.8.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "duckdb>=0.10.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "black>=23.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings>=0.24.0",
]
torch = [
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cmplx*"]

[tool.setuptools.package-data]
"cmplx.framework" = ["templates/*.j2"]
